root/apps/web/qaccount/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qaccount-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ "qaccount.preprod.qoffice.cloud" ]
      secretName: qaccount-tls
  rules:
    - host: qaccount.preprod.qoffice.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: qaccount, port: { number: 80 } } }
